# kachaka-sdk-toolkit

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.cfg
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml
docs/plans/: 2026-02-19-camera-separate-implementation.md  2026-02-19-camera-separate-integration-design.md  2026-02-23-setup-cli-design.md
kachaka_core/: __init__.py  camera.py  commands.py  connection.py  controller.py  detection.py  error_handling.py  interceptors.py  queries.py  transform.py
kachaka_sdk_toolkit/: setup_cli.py
mcp_server/: server.py
skill/: SKILL.md
skills/kachaka-sdk/: SKILL.md
skills/kachaka-sdk/examples/: typical_usage.py
tests/: test_camera.py  test_commands.py  test_connection.py  test_controller.py  test_detection.py  test_error_handling.py  test_interceptors.py  test_playground.py  test_queries.py  test_server_controller.py  test_transform.py
